--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "angular": "^1.5.5",
+    "body-parser": "1.15.0",
+    "express": "4.13.4",
+    "webpack": "1.13.0"
+  }
 }
