--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "angular": "^1.5.5",
     "body-parser": "1.15.0",
+    "cool-ascii-faces": "1.3.4",
     "express": "4.13.4",
     "webpack": "1.13.0"
   }
