--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "4.1.0"
+    "node": "4.1.0",
+    "npm": "2.14.4"
   },
   "author": "",
   "license": "ISC",
