--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "1.15.0",
     "cool-ascii-faces": "1.3.4",
     "express": "4.13.4",
+    "mongoose": "4.4.13",
     "webpack": "1.13.0"
   }
 }
