--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular": "^1.5.5",
     "body-parser": "1.15.0",
     "cool-ascii-faces": "1.3.4",
+    "cors": "^2.7.1",
     "express": "4.13.4",
     "mongoose": "4.4.13",
     "webpack": "1.13.0"
